<resources>
    <string name="app_name">HealthApp</string>
    <string name="login">Login</string>
    <string name="register">Registrazione</string>
    <string name="title_es">Esercizi</string>
    <string name="title_ali">Alimentazione</string>
    <string name="action_settings">Impostazioni</string>
    <string name="conferma">Confermare la scelta ?</string>
    <string name="title1">PURA ENERGIA</string>
    <string name="title2">Una carica di energia con allenamenti brevi e veloci</string>
    <string name="title3">Funzionalità principali</string>
    <string name="bmi_1">Molto sottopeso</string>
    <string name="bmi_2">Gravemente sottopeso</string>
    <string name="bmi_3">Sottopeso</string>
    <string name="bmi_4">Normopeso</string>
    <string name="bmi_5">Sovrappeso</string>
    <string name="bmi_6">Moderatamente obeso</string>
    <string name="bmi_7">Gravemente obeso</string>
    <string name="bmi_8">Molto obeso</string>
    <string name="text_button_calculate">Calcola</string>
    <string name="text_button_exit">Esci</string>
    <string name="default_show_result"> </string>
    <string name="default_show_bmi"> Inserire peso (kg) e altezza (m) </string>
    <string name="text_label_kg">kg</string>
    <string name="text_label_m">cm</string>
    <string name="content_button_calculate">Calcola il tuo BMI</string>
    <string name="content_button_exit">Esci dalla sezione</string>
    <string name="content_show_result"> </string>
    <string name="content_show_bmi"> </string>
    <string name="content_user_answer">Digita il tuo peso in Kg</string>
    <string name="bmi1">Calcolo BMI</string>
    <string name="bmi2">indice di massa corporea</string>
    <string name="bmi3">IL Body Mass Index (BMI) o Indice di Massa Corporea (IMC)  è un parametro molto utilizzato per ottenere una valutazione generale del proprio peso corporeo. Esso mette in relazione con una semplice formula matematica l altezza con il peso del soggetto. Si ottiene dividendo il peso in Kg del soggetto con il quadrato dell altezza espressa in metri. Il risultato di tale formula classifica il soggetto in un area di peso che può essere: normale - sottopeso - sovrappeso - obesità di medio grado - obesità di alto grado.\n\n16-18,49    SOTTOPESO\n18.5-24,99  NORMOPESO\n25-29,99    SOVRAPPESO\n30-34,99    OBESITÀ\n\nEsempio: \nSe il vostro peso è 80 kg e siete alti 185 cm, il vostro B.M.I. è:\n80 / (1,85 x 1,85) = 23,4\nIl vostro peso corporeo si colloca nella fascia NORMOPESO \n</string>
    <string name="bmi4">Calcola il tuo BMI</string>
    <string name="bmi5">inserisci i dati</string>
    <string name="basic3">Sesso</string>
    <string name="basic3radio1">Maschio</string>
    <string name="basic3radio2">Femmina</string>
    <string name="basic4">Altezza</string>
    <string name="ageHint">Inserire altezza</string>
    <string name="basic5">Altezza</string>
    <string name="nameInputHint">Nome</string>
    <string name="ageInputHint">Età</string>
    <string name="heightInputHint">Altezza (cm)</string>
    <string name="weightInputHint">Peso (kg)</string>
    <string name="sed">Sedentario</string>
    <string name="att">Attivo</string>
    <string name="matt">Molto attivo</string>
    <string name="legg">Leggero</string>
    <string name="mod">Moderato</string>
    <string name="ints">Intenso</string>
    <string name="lets_calculate_together">Calcoliamo insieme!</string>
    <string name="tdee_total_daily_energy_expenditure">TDEE : Total Daily Energy Expenditure</string>
    <string name="my_age_is">La mia età</string>
    <string name="my_height_is">La mia altezza</string>
    <string name="my_weight_is">Il mio peso</string>
    <string name="age">Età</string>
    <string name="height">Altezza</string>
    <string name="weight">Peso</string>
    <string name="describe_your_daily_activity_level">Descrivi il tuo livello di attività giornaliera</string>
    <string name="days_per_week">Giorni per settimana</string>
    <string name="how_intense_is_your_exercise">Quanto intenso è stato il tuo allenamento</string>
    <string name="calculate">Calcola</string>
    <string name="reset">Reset</string>
    <string name="your_tdee_is">Il tuo TDEE</string>
    <string name="please_select_your_goal">Seleziona il tuo obbiettivo</string>
    <string name="to_reach_your_goal_you_will_need_to_consume">Per raggiungere il tuo obiettivo, devi consumare</string>
    <string name="calories">\u0020Calorie</string>
    <string name="calories_from_protein">Calorie dalle Proteine\u0020</string>
    <string name="grams">\u0020 grammi</string>
    <string name="calories_from_fat">Calorie dai Grassi\u0020</string>
    <string name="swirl">\u0020~\u0020</string>
    <string name="scrub_empty">Tocca e rilascia il grafico</string>
    <string name="scrub_format">Peso: %1$s</string>
    <string name="calories_from_carbs">Calorie dai Carboidrati\u0020</string>
    <string name="kg">Kg</string>
    <string name="_234234">234234</string>
    <string name="nutrition"><![CDATA[Nutrition & Macros]]></string>
    <string name="toast_make_sure">Perfavore controlla che i dati inseriti siano corretti</string>
    <string name="loading">Loading…</string>
    <string name="pro">Proteine</string>
    <string name="carb">Carboidrati</string>
    <string name="gra">Grassi</string>
    <string name="richiesta_inv">Richiesta inviata</string>
    <string name="richiesta_trovata">Richiesta già inviata</string>
    <string name="tdee1">Calcolo TDEE</string>
    <string name="tdee2">Il consumo energetico giornaliero complessivo o TDEE (acronimo di Total Daily Energy Expenditure: letteralmente spesa energetica giornaliera totale) non è altro che una stima di quante calorie bruciamo giornalmente. Si tratta di un valore differente da quello del tasso metabolico basale (BMR) in quanto prende in considerazione, oltre che allo stesso tasso metabolico basale, anche i livelli di attività che facciamo. \nEcco una guida passo passo per calcolare il tuo BMR utilizzando l’equazione di Harris-Benedict:\nDonne BMR = 655 + (9,6 X peso in kg) + (1,8 x altezza in cm) – (4,7 x età in anni)\n\nUomo BMR = 66 + (13,7 X peso in kg) + (5 x altezza in cm) – (6,8 x età in anni)\nAd esempio, prendiamo un maschio di 30 anni di nome Luca che è alto 180 cm e pesa 78 chili.\n\nBMR = 66 + (13,7 x 78) + (5 x 180) – (6,8 x 30)\nBMR = 66 + 1068,6 + 900 – 204\nBMR = 1830,6\n\nQuindi, come minimo indispensabile per sostenere la vita e garantire la longevità, il nostro Luca avrebbe bisogno di consumare circa 1830 calorie.\n\nIl prossimo passo nel capire TDEE sarebbe quello di calcolare l’effetto termico del cibo, nonché i fattori di non esercizio e di esercizio.Fortunatamente, non devi passare ore a eseguire calcoli più noiosi. I ricercatori hanno determinato una serie di “moltiplicatori di attività”, noti come moltiplicatori di Katch-McArdle.\n\nPer calcolare il tuo TDEE approssimativo, basta moltiplicare questi fattori di attività dal tuo BMR:\n\nSedentario (poco o nessun esercizio + lavoro di scrivania) = 1.2\nLeggermente attivo (esercizio leggero 1-3 giorni / settimana) = 1.375\nModeratamente attivo (esercizio moderato 3-5 giorni / settimana) = 1,55\nMolto attivo (allenamento pesante 6-7 giorni / settimana) = 1.725\n\nEstremamente attivo (esercizio molto pesante, duro lavoro, allenamento 2x / giorno) = 1.9\n\nTornando al nostro esempio, supponiamo che Luca si alleni 2 giorni alla settimana. Questo mette Luca nella categoria “Leggermente Attivo“.\n\nPer il calcolo del TDEE approssimativo di Luca, moltiplica il suo BMR di 1,375. Questo ci dà:\n\nTDEE = 1,375 x BMR\nTDEE = 1,375 x 1830\nTDEE = 2517\n\nQuindi, dal calcolo del TDEE, il nostro esempio Luca ha bisogno di consumare circa 2500 calorie al giorno solo per mantenere il suo peso attuale.\n</string>
    <string name="tdee3">Calcola il tuo TDEE</string>
    <string name="title_bmi">Calcola BMI</string>
    <string name="title_calorie">Calcola Calorie</string>
    <string name="title_home">Home</string>
    <string name="risultati">Risultati</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_qr">Leggi qr</string>
    <string name="title_clienti">Gestisci clienti</string>
    <string name="title_scheda">Scheda</string>
    <string name="title_richiesta">Voglio diventare un PT!</string>
    <string name="title_account">Impostazioni account</string>
    <string name="title_support">Aiuti e Supporto</string>
    <string name="categoria">Categoria :</string>
    <string name="esecuzione">Esecuzione :</string>
    <string name="cronometro">Cronometro</string>
    <string name="swipe_left_for_register">Registrati</string>
    <string name="swipe_right_for_login">Login</string>
    <string name="password">Password</string>
    <string name="rewrite_pss">Conferma password</string>
    <string name="email">Email</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="err_nome">Compilare campo nome</string>
    <string name="err_cog">Compilare campo cognome</string>
    <string name="err_em">Compilare campo emaill</string>
    <string name="err_em2">Inserire una email valida</string>
    <string name="err_pssw">Compilare campo password</string>
    <string name="err_rpssw">Confermare la password</string>
    <string name="err_rpssw2">Le password non coincidono</string>
    <string name="reg_ok">Registrazione completata!</string>
    <string name="log_ok">Login effettuato!</string>
    <string name="dimenticata">Password dimenticata ?</string>
    <string name="ins_ex">Premi il tasto per aggiungere gli esercizi alla scheda</string>
    <string name="invia_scheda">Invia scheda</string>
    <string name="modifica_scheda">Modifica scheda</string>
    <string name="ins_ok">Inserimento scheda completato!</string>
    <string name="item_rem">L\'elemento è stato rimosso dalla lista</string>
    <string name="cam_err">Per utilizzare il lettore di qr , abilitare i permessi per la fotocamera</string>
    <string name="richiesto">Campo richiesto</string>
    <string name="refresh">Refresh</string>
    <string name="title_step">Conta passi</string>
    <string name="fit_cycling">Cycling</string>
    <string name="fit_running">Running</string>
    <string name="step_counter">
         android.hardware.sensor.stepcounter
    </string>
    <string name="step_detector">
         android.hardware.sensor.stepdetector
    </string>
    <string name="text1">Inserisci l\'informazione</string>
    <string name="text2">Passi</string>
    <string name="text3">Calorie</string>
    <string name="modp">Modifica</string>
    <string name="pssold">Password corrente</string>
    <string name="mod_ok">Modifica effettuata!</string>
    <string name="food">Cibo</string>
    <string name="setta">Imposta gli obiettivi</string>
    <string name="passi_txt">La persona media dovrebbe fare almeno 10.000 passi al giorno per mantenere una buona salute, che equivale a circa 5 miglia di camminata</string>
    <string name="supp_log">Come posso effettuare il login?</string>
    <string name="supp_reg">Come posso registrarmi?</string>
    <string name="supp_es">Come cerco un esercizio?</string>
    <string name="supp_tdee">Cos\'è il TDE ? Come posso calcolarlo?</string>
    <string name="supp_bmi">Cos\'è il BMI ? Come posso calcolarlo?</string>
    <string name="supp_pass">Come imposto l\'obiettivo di passi giornaliero?</string>
    <string name="supp_sch">Come posso vedere la mia scheda ?</string>
    <string name="supp_qr">Come posso scansionare un qr code ? A cosa serve?</string>
    <string name="supp_inssch">Sono un pt, come posso creare una scheda per un cliente?</string>
    <string name="supp_diet">Come cerco una dieta?</string>
    <string name="supp_em">Hai bisogno di altre informazioni? Contattaci!</string>
</resources>