<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="515dp"
        android:padding="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivityFragment">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellowS"
                android:hint="@string/nameInputHint"
                android:inputType="text"
                android:paddingLeft="50dp"
                android:paddingTop="20dp"
                android:paddingRight="50dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/yellowS"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basic3radio1"
                    android:textColor="@color/greyXL" />

                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/basic3radio2"
                    android:textColor="@color/greyXL" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/ageInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/yellowS"
                android:hint="@string/ageInputHint"
                android:inputType="number"
                android:paddingLeft="50dp"
                android:paddingTop="20dp"
                android:paddingRight="50dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">


            <EditText
                android:id="@+id/heightInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/yellowS"
                android:hint="@string/heightInputHint"
                android:inputType="phone"
                android:paddingLeft="50dp"
                android:paddingTop="20dp"
                android:paddingRight="50dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/weightInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/yellowS"
                android:hint="@string/weightInputHint"
                android:inputType="number"
                android:paddingLeft="50dp"
                android:paddingTop="20dp"
                android:paddingRight="50dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/yellowS"
                android:hint="@string/risultati"
                android:inputType="text"
                android:paddingLeft="50dp"
                android:paddingTop="20dp"
                android:paddingRight="50dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/calcola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"

                android:paddingLeft="50dp"

                android:paddingTop="20dp"
                android:paddingRight="50dp"
                android:paddingBottom="20dp"
                android:text="@string/text_button_calculate"
                app:cornerRadius="20dp" />

        </TableRow>
    </TableLayout>

</androidx.core.widget.NestedScrollView>